# svitlogramm

./: .coverage  .dockerignore  .env  .env.example  .gitignore  README.md  alembic.ini  config.py  desktop.ini  docker-compose.yml  main.py  psycopg2-2.9.6-cp310-cp310-win_amd64.whl  pyproject.toml
client_rest/: images.html  index.html  logout.html  signup.html  user_profile.html
client_rest/css/: slitlogram.css
client_rest/javascript/: images.js  login.js  user_profil.js
migrations/: env.py
migrations/versions/: 5a27b931f096_add_avg_ratig_image.py  95b81f8bc4bc_init.py  9e4736a71b83_init.py
openai_tag_generator/: .env  app.py
openai_tag_generator/static/: main.css
openai_tag_generator/templates/: index.html
pet_project/repository/: comments.py  image_formats.py  image_ratings.py  images.py  tags.py  users.py
pet_project/routes/: auth.py  image_comments.py  image_formats.py  image_ratings.py  images.py  tags.py  users.py
pet_project/schemas/: core.py  image.py  image_formats.py  image_raitings.py  user.py
pet_project/services/: auth.py  cloudinary.py  email.py  gravatar.py  qr_code.py
pet_project/utils/: filters.py
postgres-data/: postmaster.pid
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
static/: style.css
templates/: images.html  index.html  logout.html  signup.html  user_profile.html
tests/: conftest.py  test_main.py  test_repositoru_images.py  test_repository_comments.py  test_repository_image_formats.py  test_repository_image_ratings.py  test_repository_tags.py  test_repository_users.py  test_route_auth.py  test_route_root.py  test_routes_auth.py  test_routes_image_ratings.py  test_routes_tags.py  test_unit_repository_comments.py  test_unit_repository_user.py
(+153 files in other folders)
